final version of swagger with documentation all currently routes
